[package]
name = "niktwo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
scraper = "0.13"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
